derive/tests/snapshots/wrapper_created_unnamed/Label/get_all_labels.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `label` table.
    pub fn get_all_labels<'a>(&'a self) -> impl Iterator<Item = Label> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().label().iter()
    }
}
