derive/tests/snapshots/wrapper_created_unnamed/Label/update_label_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Label` row of the `label` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_label_by_id<'a>(
        &'a self,
        label: Label,
    ) -> Result<Label, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut label = label;
        let label = self.db().label().id().update(label);
        Ok(label)
    }
}
